--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="card">
           <div class="card-image-container">
-            <img src="assets/img/profesional-python.png" alt="">
+            <img src="assets/img/frontend.png" alt="">
           </div>
           <p class="card-title">FrontEnd</p>
           <p class="card-des">
