--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="src/assets/css/style.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="./assets/main.js"></script>
 </head>
@@ -62,7 +62,7 @@
         <!-- content -->
         <div class="card">
           <div class="card-image-container">
-            <img src="assets/img/profesional-python.png" alt="">
+            <img src="src/assets/img/profesional-python.png" alt="">
           </div>
           <p class="card-title">Python</p>
           <p class="card-des">
@@ -71,7 +71,7 @@
         </div>
         <div class="card">
           <div class="card-image-container">
-            <img src="assets/img/frontend.png" alt="">
+            <img src="src/assets/img/frontend.png" alt="">
           </div>
           <p class="card-title">FrontEnd</p>
           <p class="card-des">
@@ -80,7 +80,7 @@
         </div>
         <div class="card">
           <div class="card-image-container">
-            <img src="assets/img/C.png" alt="">
+            <img src="src/assets/img/C.png" alt="">
           </div>
           <p class="card-title">C</p>
           <p class="card-des">
@@ -89,7 +89,7 @@
         </div>
         <div class="card">
           <div class="card-image-container">
-            <img src="assets/img/javascript.png" alt="">
+            <img src="src/assets/img/javascript.png" alt="">
           </div>
           <p class="card-title">JavaScript</p>
           <p class="card-des">
