--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/assets/css/style.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="./assets/main.js"></script>
 </head>
@@ -44,7 +45,7 @@
             </h1>
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Todo lo relacionado con la poderosisima PC MASTER RACE</p>
+              Diplomas y Cursos Realizados</p>
           </div>
         </main>
       </div>
@@ -56,10 +57,45 @@
   </div>
   <div class="bg-white">
     <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900">Last YouTube Videos</h2>
+      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900">Diplomas</h2> <br>
       <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8" id="content">
         <!-- content -->
-        
+        <div class="card">
+          <div class="card-image-container">
+            <img src="src/assets/img/profesional-python.png" alt="">
+          </div>
+          <p class="card-title">Python</p>
+          <p class="card-des">
+            Curso profesional de Python.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-image-container">
+            <img src="src/assets/img/frontend.png" alt="">
+          </div>
+          <p class="card-title">FrontEnd</p>
+          <p class="card-des">
+            Curso de Frontend developer.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-image-container">
+            <img src="src/assets/img/C.png" alt="">
+          </div>
+          <p class="card-title">C</p>
+          <p class="card-des">
+            Curso de control de flujo con C.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-image-container">
+            <img src="src/assets/img/javascript.png" alt="">
+          </div>
+          <p class="card-title">JavaScript</p>
+          <p class="card-des">
+            Curso practico de JavaScript.
+          </p>
+        </div>
       </div>
     </div>
   </div>
